# trilogy

./: .clang-format  .dockerignore  .env  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mysql  Dockerfile.test.bionic  Dockerfile.test.buster  Dockerfile.test.focal  Dockerfile.test.stretch  Makefile  README.md  Readme.md  SECURITY.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  linux-build.yml  macos.yml
contrib/ruby/: .gitignore  Gemfile  README.md  Rakefile  trilogy-2.7.0.gem  trilogy.gemspec
contrib/ruby/ext/trilogy-ruby/: cast.c  cext.c  extconf.rb  inc  trilogy-ruby.h
contrib/ruby/lib/: trilogy.rb
contrib/ruby/lib/trilogy/: encoding.rb  error.rb  result.rb  version.rb
contrib/ruby/script/: benchmark  benchmark-connect  benchmark_datetime  bootstrap  build  cibuild  test
contrib/ruby/test/: auth_test.rb  cast_test.rb  client_test.rb  setup.rb  ssl_test.rb  test_helper.rb
docker-entrypoint-initdb.d/: caching_sha2_password_user.sql  cleartext_user.sql  generate_keys.sh  native_password.sql  x509_user.sql
example/: trilogy_binlog.c  trilogy_query.c
inc/: trilogy.h
inc/trilogy/: blocking.h  buffer.h  builder.h  client.h  error.h  protocol.h  reader.h  socket.h
script/: cibuild  clang-format  test
src/: blocking.c  buffer.c  builder.c  client.c  packet_parser.c  protocol.c  reader.c  socket.c
test/: binlog_test.c  blocking_test.c  buffer_test.c  builder_test.c  charset_test.c  error_test.c  fuzz.c  greatest.h  helpers.c  packet_parser_test.c  reader_test.c  runner.c  socket_test.c  test.h
test/client/: auth_test.c  change_db_test.c  connect_test.c  eof_packet_test.c  escape_test.c  ping_test.c  set_option_test.c  stmt_close_test.c  stmt_execute_test.c  stmt_prepare_test.c  stmt_reset_test.c
test/mariadb/: Dockerfile
test/mariadb/conf.d/10.11/: build.cnf
test/mariadb/conf.d/10.6/: build.cnf
test/mariadb/conf.d/11.4/: build.cnf  macos.cnf
test/mariadb/conf.d/11.8/: build.cnf  macos.cnf
test/mariadb/conf.d/12.1/: build.cnf
test/mariadb/docker-entrypoint-initdb.d/: caching_sha2_password_user.sh
test/mysql/: Dockerfile
test/mysql/conf.d/: build.cnf
test/mysql/conf.d/8.4/: build.cnf  macos.cnf
test/mysql/conf.d/9.5/: build.cnf
test/mysql/docker-entrypoint-initdb.d/: caching_sha2_password_user.sql  native_password_user.sh  native_password_user.sql
test/protocol/building/: auth_packet_test.c  change_db_packet_test.c  ping_packet_test.c  query_packet_test.c  quit_packet_test.c  set_option_packet_test.c  stmt_bind_data_packet_test.c  stmt_close_packet_test.c  stmt_execute_packet_test.c  stmt_prepare_packet_test.c  stmt_reset_packet_test.c
test/protocol/parsing/: column_packet_test.c  eof_packet_test.c  error_packet_test.c  handshake_test.c  ok_packet_test.c  result_packet_test.c  row_packet_test.c
